---
source: crates/stepflow-cli/tests/commands/test_list_components.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - "--log-level=error"
    - list-components
    - "--config=tests/stepflow-config.yml"
    - "--format=yaml"
  env:
    STEPFLOW_LOG_DESTINATION: ""
    STEPFLOW_LOG_FILE: ""
    STEPFLOW_LOG_FORMAT: ""
    STEPFLOW_LOG_LEVEL: ""
    STEPFLOW_OTHER_LOG_LEVEL: ""
    STEPFLOW_OTLP_ENDPOINT: ""
    STEPFLOW_TRACE_ENABLED: ""
---
success: true
exit_code: 0
----- stdout -----
components:
- component: /create_messages
  path: /create_messages
  description: Create a chat message list from system instructions and user prompt
  input_schema:
    $schema: https://json-schema.org/draft/2020-12/schema
    title: CreateMessagesInput
    type: object
    properties:
      system_instructions:
        description: The system instructions to include in the message list.
        type:
        - string
        - 'null'
      user_prompt:
        description: The user prompt to include in the message list.
        type: string
    required:
    - user_prompt
  output_schema:
    $schema: https://json-schema.org/draft/2020-12/schema
    title: CreateMessagesOutput
    type: object
    properties:
      messages:
        type: array
        items:
          $ref: '#/$defs/ChatMessage'
    required:
    - messages
  plugin: builtin
  routes:
  - /builtin/create_messages
- component: /eval
  path: /eval
  description: Execute a nested workflow with given input and return the result
  input_schema:
    $schema: https://json-schema.org/draft/2020-12/schema
    title: EvalInput
    description: Input for the eval component
    type: object
    properties:
      flow_id:
        description: The ID of the workflow to execute (blob ID)
        $ref: '#/$defs/BlobId'
      input:
        description: The input to pass to the workflow
        $ref: '#/$defs/Value'
    required:
    - flow_id
    - input
  output_schema:
    $schema: https://json-schema.org/draft/2020-12/schema
    title: EvalOutput
    description: |-
      Output from the eval component

      The output is simply the result of the nested workflow execution
    type: object
    properties:
      result:
        description: The result from executing the nested workflow
        $ref: '#/$defs/FlowResult'
      run_id:
        description: The run ID of the nested workflow
        type: string
    required:
    - result
    - run_id
  plugin: builtin
  routes:
  - /builtin/eval
- component: /get_blob
  path: /get_blob
  description: Retrieve JSON data from a blob using its ID
  input_schema:
    $schema: https://json-schema.org/draft/2020-12/schema
    title: GetBlobInput
    description: Input for the get_blob component
    type: object
    properties:
      blob_id:
        description: The blob ID to retrieve
        type: string
    required:
    - blob_id
  output_schema:
    $schema: https://json-schema.org/draft/2020-12/schema
    title: GetBlobOutput
    description: Output from the get_blob component
    type: object
    properties:
      data:
        description: The JSON data stored in the blob
    required:
    - data
  plugin: builtin
  routes:
  - /builtin/get_blob
- component: /iterate
  path: /iterate
  description: Iteratively apply a workflow until it returns a result instead of next
  input_schema:
    $schema: https://json-schema.org/draft/2020-12/schema
    title: IterateInput
    description: Input for the iterate component
    type: object
    properties:
      flow:
        description: 'The workflow to iterate. Must return either {"result": value} or {"next": value}'
        $ref: '#/$defs/Flow'
      initial_input:
        description: The initial input to pass to the workflow
        $ref: '#/$defs/Value'
      max_iterations:
        description: 'Maximum number of iterations to prevent infinite loops (default: 1000)'
        type: integer
        format: uint32
        minimum: 0
        default: 1000
    required:
    - flow
    - initial_input
  output_schema:
    $schema: https://json-schema.org/draft/2020-12/schema
    title: IterateOutput
    description: Output from the iterate component
    type: object
    properties:
      result:
        description: The final result value
        $ref: '#/$defs/Value'
      iterations:
        description: The number of iterations performed
        type: integer
        format: uint32
        minimum: 0
      terminated:
        description: Whether the iteration was terminated by max_iterations
        type: boolean
    required:
    - result
    - iterations
    - terminated
  plugin: builtin
  routes:
  - /builtin/iterate
- component: /load_file
  path: /load_file
  description: Load and parse a file (JSON, YAML, or text) from the filesystem
  input_schema:
    $schema: https://json-schema.org/draft/2020-12/schema
    title: LoadFileInput
    type: object
    properties:
      path:
        description: Path to the file to load
        type: string
      format:
        description: Format of the file (json, yaml, text). If not specified, inferred from extension
        anyOf:
        - $ref: '#/$defs/FileFormat'
        - type: 'null'
    required:
    - path
  output_schema:
    $schema: https://json-schema.org/draft/2020-12/schema
    title: LoadFileOutput
    type: object
    properties:
      data:
        description: The loaded data (parsed JSON/YAML or raw text)
      metadata:
        description: Metadata about the loaded file
        $ref: '#/$defs/FileMetadata'
    required:
    - data
    - metadata
  plugin: builtin
  routes:
  - /builtin/load_file
- component: /map
  path: /map
  description: Apply a workflow to each item in a list and collect the results
  input_schema:
    $schema: https://json-schema.org/draft/2020-12/schema
    title: MapInput
    description: Input for the map component
    type: object
    properties:
      workflow:
        description: The workflow to apply to each item
        $ref: '#/$defs/Flow'
      items:
        description: The list of items to process
        type: array
        items:
          $ref: '#/$defs/Value'
      max_concurrency:
        description: Maximum number of concurrent executions (optional, defaults to number of items)
        type:
        - integer
        - 'null'
        format: uint
        minimum: 0
    required:
    - workflow
    - items
  output_schema:
    $schema: https://json-schema.org/draft/2020-12/schema
    title: MapOutput
    description: Output from the map component
    type: object
    properties:
      results:
        description: The results from processing each item
        type: array
        items:
          $ref: '#/$defs/FlowResult'
      successful:
        description: Summary statistics
        type: integer
        format: uint32
        minimum: 0
      failed:
        type: integer
        format: uint32
        minimum: 0
    required:
    - results
    - successful
    - failed
  plugin: builtin
  routes:
  - /builtin/map
- component: /openai
  path: /openai
  description: Send messages to OpenAI's chat completion API and get a response
  input_schema:
    $schema: https://json-schema.org/draft/2020-12/schema
    title: OpenAIInput
    description: Input for the OpenAI component
    type: object
    properties:
      messages:
        description: The messages to send to the API
        type: array
        items:
          $ref: '#/$defs/ChatMessage'
      max_tokens:
        description: Max tokens to generate (optional)
        type:
        - integer
        - 'null'
        format: uint16
        minimum: 0
        maximum: 65535
      temperature:
        description: Temperature setting (optional)
        type:
        - number
        - 'null'
        format: float
      api_key:
        description: API key override (optional - uses environment variable if not provided)
        type:
        - string
        - 'null'
    required:
    - messages
  output_schema:
    $schema: https://json-schema.org/draft/2020-12/schema
    title: OpenAIOutput
    description: Output from the OpenAI component
    type: object
    properties:
      response:
        description: The generated response text
        type: string
    required:
    - response
  plugin: builtin
  routes:
  - /builtin/openai
- component: /put_blob
  path: /put_blob
  description: Store JSON data as a blob and return its content-addressable ID
  input_schema:
    $schema: https://json-schema.org/draft/2020-12/schema
    title: PutBlobInput
    description: Input for the put_blob component
    type: object
    properties:
      data:
        description: The JSON data to store as a blob
      blob_type:
        description: The type of blob to store
        $ref: '#/$defs/BlobType'
    required:
    - data
    - blob_type
  output_schema:
    $schema: https://json-schema.org/draft/2020-12/schema
    title: PutBlobOutput
    description: Output from the put_blob component
    type: object
    properties:
      blob_id:
        description: The blob ID for the stored data
        type: string
    required:
    - blob_id
  plugin: builtin
  routes:
  - /builtin/put_blob


----- stderr -----
